--- a/build
+++ b/build
@@ -1,72 +1,5 @@
 #!/bin/bash
-cd /tmp/rom
-
-#tg
-tg(){
-	bot_api=$bot_token
-	your_telegram_id=$1 
-	msg=$2 
-	curl -s "https://api.telegram.org/bot${bot_token}/sendmessage" --data "text=$msg&chat_id=${your_telegram_id}&parse_mode=html"
-}
-
-id=620358472 
-tg $id "✴️ holland1 ROM compile status: triggered!.
-https://cirrus-ci.com/task/$CIRRUS_TASK_ID ✴️"
-
-repo init -q --no-repo-verify --depth=1 -u git://github.com/AospExtended/manifest.git -b 11.x -g default,-device,-mips,-darwin,-notdefault
-git clone https://github.com/popoASM/device_10or_E-11.git -b test --depth=1 device/10or/holland1
-git clone https://github.com/Jebaitedneko/android_kernel_10or_E-4.9.git --depth=1 kernel/10or/holland1
-git clone https://github.com/popoASM/vendor_10or_E-11.git vendor/10or/holland1
-repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j 8 || repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j 8
-
-# Normal build steps
-source build/envsetup.sh
-lunch aosp_holland1-userdebug
-export CCACHE_DIR=/tmp/ccache
-export CCACHE_EXEC=$(which ccache)
-export USE_CCACHE=1
-ccache -M 20G 
-ccache -o compression=true 
-ccache -z
-
-#tg
-tg(){
-	bot_api=$bot_token
-	your_telegram_id=$1 
-	msg=$2
-	curl -s "https://api.telegram.org/bot${bot_token}/sendmessage" --data "text=$msg&chat_id=${your_telegram_id}&parse_mode=html"
-}
-id=620358472
-tg $id "✳️holland1 compile status: started✳️"
-
-#make api-stubs-docs || echo no problem
-#make system-api-stubs-docs || echo no problem
-#make test-api-stubs-docs || echo no problem
-m aex -j8
-
-#uploads
-#up(){
-#	curl --upload-file $1 https://transfer.sh/$(basename $1); echo
-#	# 14 days, 10 GB limit
-#}
-
-time rclone copy /tmp/rom/out/target/product/holland1/dotOS*zip brrbrr:rom -P
-tg $id "✅holland1 compile status: finished✅"
-
-ccache -s
-
-cd /tmp
-
-com () 
-{ 
-    tar --use-compress-program="pigz -k -$2 " -cf $1.tar.gz $1
-}
-
-time com ccache 1
-
-tg $id "holland1 ROM compile status:
-ccache uploading started at:- $(date)."
-
-time rclone copy ccache.tar.gz brrbrr:ccache -P 
-
-tg $id "✅holland1 ccache uploaded successfully✅"
+tmate -S /tmp/tmate.sock new-session -d               # Launch tmate in a headless mode
+tmate -S /tmp/tmate.sock wait tmate-ready             # Blocks until the SSH connection is established
+tmate -S /tmp/tmate.sock display -p '#{tmate_ssh}'    # Prints the SSH connection string
+sleep 2h
