--- a/build
+++ b/build
@@ -1,55 +1,69 @@
 #!/bin/bash
-cd /tmp/rom # Depends on where source got synced
+mkdir -p /tmp/rom 
+cd /tmp/rom
+
+git config --global  user.name "popoASM"
+git config --global  user.email "pratyayaborborah@gmail.com"
+
+# Fix TimeZone
+sudo ln -snf /usr/share/zoneinfo/Asia/Kolkata /etc/localtime
+
+#tg
+tg(){
+	bot_api=$bot_token
+	your_telegram_id=$1 
+	msg=$2 
+	curl -s "https://api.telegram.org/bot${bot_token}/sendmessage" --data "text=$msg&chat_id=${your_telegram_id}&parse_mode=html"
+}
+
+id=620358472 
+tg $id "✴️ holland1 ROM compile status: triggered!.
+https://cirrus-ci.com/task/$CIRRUS_TASK_ID ✴️"
+
+#sync
+repo init -q --no-repo-verify --depth=1 -u git://github.com/PixelExperience/manifest -b eleven-plus -g default,-device,-mips,-darwin,-notdefault
+git clone https://github.com/popoASM/local_manifest.git --depth=1 -b main .repo/local_manifests
+repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j 8 || repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j 8
 
 # Normal build steps
-. build/envsetup.sh
-lunch aosp_mido-user
+source build/envsetup.sh
+lunch aosp_holland1-userdebug
 export CCACHE_DIR=/tmp/ccache
 export CCACHE_EXEC=$(which ccache)
 export USE_CCACHE=1
-ccache -M 20G # It took only 6.4GB for mido
-ccache -o compression=true # Will save times and data to download and upload ccache, also negligible performance issue
-ccache -z # Clear old stats, so monitor script will provide real ccache statistics
+ccache -M 20G 
+ccache -o compression=true 
+ccache -z
 
-# Next 8 lines should be run first to collect ccache and then upload, after doning it 1 or 2 times, our ccache will help to build without these 8 lines
-#make api-stubs-docs || echo no problem
-#make hiddenapi-lists-docs || echo no problem
-#make system-api-stubs-docs || echo no problem
-#make test-api-stubs-docs || echo no problem
-#make aex -j10 &  # I used aex build command
-#sleep 85m # Lets give some space for uploading ccache
-#kill %1 # better way to kill it!
-#ccache -s
-#and dont use below codes for first 1 or 2 times, to get ccache uploaded,
-#as instructed, i got enough cccahe more than 4.5gb, tough source is not buildable, still i wanna go to final steps, my intention to collect ccache is done. Let's start final build, and get shell when bulid fails too! If source is buildable we will get a final zip file, and if not buildable, we will get a shell access to fix it. 1 minute silence for source :-(
-#So, i am adding back things which i removed previously! also with my bot and tg id
-
-# upload function for uploading rom zip file! I don't want unwanted builds in my google drive haha!
-up(){
-	curl --upload-file $1 https://transfer.sh/$(basename $1); echo
-	# 14 days, 10 GB limit
-}
-
+#tg
 tg(){
-	bot_api=1692865707:AAHvKZogI5sUGtqjd2sZvNl8tib0Q_xcYkY # Your tg bot api, dont use my one haha
-	your_telegram_id=$1 # No need to touch
-	msg=$2 # No need to touch
-	curl -s "https://api.telegram.org/bot${bot_api}/sendmessage" --data "text=$msg&chat_id=${your_telegram_id}"
+	bot_api=$bot_token
+	your_telegram_id=$1 
+	msg=$2
+	curl -s "https://api.telegram.org/bot${bot_token}/sendmessage" --data "text=$msg&chat_id=${your_telegram_id}&parse_mode=html"
+}
+id=620358472
+tg $id "✳️holland1 compile status: started✳️"
+
+make bacon -j8
+
+time rclone copy /tmp/rom/out/target/product/holland1/dotOS*zip brrbrr:rom -P
+tg $id "✅holland1 compile status: finished✅"
+
+ccache -s
+
+cd /tmp
+
+com () 
+{ 
+    tar --use-compress-program="pigz -k -$2 " -cf $1.tar.gz $1
 }
 
-id=571213272 # Your telegram id
+time com ccache 1
 
-# Build command! j10 for 10 cpu, j8 for 8 cpu, otherwise memeroy will end up even its 24G
-# Upload rom zip file if succeed to build! Send notification to tg! And send shell to tg if build fails!
+tg $id "holland1 ROM compile status:
+ccache uploading started at:- $(date)."
 
-# Let's compile by parts! Coz of ram issue!
-make api-stubs-docs || echo no problem
-make hiddenapi-lists-docs || echo no problem
-make system-api-stubs-docs || echo no problem
-make test-api-stubs-docs || echo no problem
+time rclone copy ccache.tar.gz brrbrr:ccache -P 
 
-make aex -j10 \
-	&& send_zip=$(up out/target/product/mido/*zip) && tg $id "Build Succeed!
-$send_zip" \
-	|| tmate -S /tmp/tmate.sock new-session -d && tmate -S /tmp/tmate.sock wait tmate-ready && send_shell=$(tmate -S /tmp/tmate.sock display -p '#{tmate_ssh}') && tg $id "Build Failed" && tg $id "$send_shell" && ccache -s && sleep 2h
-ccache -s # Let's print ccache statistics finally
+tg $id "✅holland1 ccache uploaded successfully✅"
